# Document_Portal

./: ALGORITHMS.md  API_DOC.md  API_DOCUMENTATION.md  COMPREHENSIVE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCEMENTS_SUMMARY.md  MONITORING_GUIDE.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  README.md  benchmark_perf.py  check_models.py  docker-compose.yml  merger_debug.json  nohup.out  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_community.py  test_invoices.py  test_merger_real.py  test_night_audit.py
api/: main.py
docs/: CHANGELOG_VERIFIER.md  REQUIREMENTS.md
document_portal_core/: __init__.py  address_utils.py  analyzer.py  comparator.py  compliance.py  document_cache.py  extractor.py  gemini_extractor.py  graph.py  id_matcher.py  image_quality_checker.py  ingestion.py  invoice_extractor.py  invoice_merger.py  rag.py  result_manager.py  scanner.py  uom_utils.py  user_store.py  verifier.py
infrastructure/: document-portal-cf.yaml
logger/: __init__.py  custom_logger.py
notebook/: advance_topics.ipynb  exception_experiment.ipynb  experiments.ipynb  logging_experiment.ipynb
prompt/: prompt_library.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_api_endpoints.py  test_comparator.py  test_graph.py  test_id_extractor.py  test_id_matcher.py  test_id_validation_logic.py  test_ingestion.py  test_ingestion_compression.py  test_invoice_endpoints.py  test_invoice_merger_logic.py  test_rag.py  test_refactor.py  test_scanner_enhanced.py  test_uom_and_compression.py  test_verifier.py
(+95 files in other folders)
