
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Document_Portal"
version = "0.1"
description = "An intelligent document analysis and comparison system powered by LLMs"
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "Sam02425" } ]
classifiers = [
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pylint", "ipykernel"]
